--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="./resources/css/stylesheet.css">
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Week 5 Assignment - Part 2</h1>
       <h2>Al's Record Shop</h2>  
     </header>
-    <main>
+    <main id="console-section">
       <p>See console for output.</p>
     </main>
     <!-- Create an unordered list with any questions you have -->
